Bug 406075 - "Firefox does not use native toolbar separator" [p=ispence@gmail.com (Ian Spence) r+sr=roc a1.9=schrep]